# pizza

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .golangci.yml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.en.md  README.md  SECURITY.md  buf.gen.yaml  go.mod  go.sum  pyproject.toml  開発工程.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
api/: buf.yaml
deploy/: Dockerfile.box-ui  Dockerfile.delivery  Dockerfile.dough  Dockerfile.pizza  README.md  compose.firecrawl.yaml  compose.yaml
docs/: architecture.md  firecrawl-selfhost-notes.md  fork-strategy.md  license-compliance.md  llm-cleansing-oss.md  mos-investigation-limits.md  operator-definition.md  (+24 more)
services/delivery/: README.md  pyproject.toml
services/delivery/pizza_delivery/: __init__.py  __main__.py  address_reverse.py  agent.py  anytime_official.py  audit.py  audit_cli.py  brand_fill_rate_export.py  brand_profiler.py  browser_scraper.py  chain_discovery.py  claude_critic.py  cleanse.py  coverage_exports.py  critic.py  cross_verifier.py  deep_research.py  enrich.py  estat.py  evaluator.py  evidence.py  extended_fc_brand_export.py  fc_directory.py  franchisee_registry.py  gbiz_client.py  houjin_bangou.py  houjin_csv.py  integrate.py  jfa_disclosure.py  jfa_fetcher.py  llm_cleanser.py  match.py  megafranchisee_clean_export.py  megafranchisee_review_hydrate.py  normalize.py  official_franchisee_sources.py  official_page_research.py  official_recruitment_crawl.py  operator_brand_discovery.py  operator_master_export.py  (+18 more)
services/delivery/pizza_delivery/commands/: __init__.py  import_megajii_csv.py  operator_spider_cmd.py  osm_fetch_all.py
services/delivery/pizza_delivery/prompts/: critic_v1.yaml  judge.yaml  judge_v4_extraction.yaml
services/delivery/pizza_delivery/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py  registry.py
services/delivery/pizza_delivery/sources/: __init__.py  edinet.py  fc_recruitment.py  jfa_detail.py  official_site.py  revenue_extractor.py
services/delivery/scripts/: tokyo_mos_operator_match.py  tokyo_mos_operator_spider.py
services/delivery/tests/: conftest.py  test_address_parser.py  test_agent.py  test_anytime_official.py  test_audit.py  test_brand_fill_rate_export.py  test_brand_profiler.py  test_browser_fallback.py  test_browser_scraper.py  test_chain_discovery.py  test_claude_critic.py  test_coverage_boost.py  test_coverage_exports.py  test_critic.py  test_cross_verifier.py  test_e2e_audit.py  test_enrich.py  test_estat.py  test_evaluator.py  test_evidence.py  test_extended_fc_brand_export.py  test_fc_directory_stores_in_pref.py  test_franchisee_registry.py  test_gbiz_client.py  test_houjin_bangou.py  test_houjin_csv.py  test_import_megajii_csv.py  test_integrate.py  test_jfa_disclosure.py  test_judge_by_evidence.py  test_live_accuracy.py  test_live_critic.py  test_live_evidence_accuracy.py  test_live_panel.py  test_llm_cleanser.py  test_match.py  test_megafranchisee_clean_export.py  test_megafranchisee_review_hydrate.py  test_normalize.py  test_normalize_oss.py  (+31 more)
services/delivery/tests/test_providers/: test_anthropic.py  test_gemini.py  test_openai.py  test_registry.py
(+716 files in other folders)
