[project]
name = "pizza-workspace"
version = "0.0.0"
description = "PI-ZZA 🍕 — polyglot Python workspace root"
readme = "README.md"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["services/delivery"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "RET"]
ignore = ["E501"]  # line-too-long handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
