[project]
name = "pizza-delivery"
version = "0.0.0"
description = "PI-ZZA 🍕 M3 Delivery — browser-use gRPC wrapper with multi-LLM providers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.80.0",
    "grpcio-reflection>=1.80.0",
    "grpcio-health-checking>=1.80.0",
    "protobuf>=6.33.0",
    "browser-use>=0.3.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-genai>=0.3.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
    "pyyaml>=6.0.3",
    "pandas>=3.0.2",
    "streamlit>=1.56.0",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.0",
    # ORM (Phase 22: 手動 YAML 維持を脱却、DB 中央集約へ)
    "sqlalchemy>=2.0.36",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pizza_delivery"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
pythonpath = ["../../gen/python"]
